--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
+#ask {
+	display: inline-block;
+	position: relative;
+	margin: 1em 0;
+	
+	background-color: white;
+	border: 1px solid gray;
+	border-radius: 5px;
+	box-shadow: 0px 0px 50px gray;
+	height: 7em;
+	width: 12em;
+	
+	text-align: center;
+	overflow: hidden;
+}
+#ask>.askmsg {
+	display: inline-block;
+	text-align: left;
+	font-size: .8em;
+	padding: .5em 1em;
+	margin-top: 1em;
+}
+#ask>.btn {
+	display: inline-block;
+	position: relative;
+	top: 1.3em;
+	border-radius: 3px;
+	color: white;
+	font-size: .8em;
+	padding: .5em 1em;
+	margin: 0em .6em;
+	cursor: pointer;
+}
+#ask>.btn:hover{
+	border: 1px solid gray;
+	box-shadow: 0px 0px 20px gray;
+}
+#ask>.yesBtn {
+	background-color: red;
+}
+#ask>.noBtn {
+	background-color: blue;
+}
 		body {
 			text-align: center;
 			padding: 0;
@@ -45,8 +88,8 @@
 			
 			max-width: 60%;
 			max-height: 60%;
-			height: 200px;
-			width: 200px;
+			height: 120px;
+			width: 120px;
 
 			padding: 0 0;
 			margin: .8em 0;
@@ -65,14 +108,16 @@
 			z-index: 99;
 		}
 		div#songMsg {
-			margin: 1em;
+      margin-top: .2em;
+      margin-bottom: 1.7em;
 			display: block;
 			height: 3em;
 			color: white;
 		}
 		span#title {
 			display:inline-block;
-			font-size: 1.5em;
+			font-size: 1.2em;
+      max-width: 100%;
 			font-weight: 700;
 			background-color: rgba(0,0,0,.3);
 			border-radius: 20px;
@@ -125,15 +170,29 @@
 		
 		canvas#playMode {
 			position: relative;
-			top: 60px;
+			top: 20px;
 			font-size: 2em;
 			font-weight: 800;
 		}
 		span#playTime {
 			position: relative;
-			top: 70px;
+      top: 1em;
 			color: white;
 			font-size: 2em;
 			font-weight: 800;
 		}
-		
+div.bottom {
+	height: 2em;
+	display: block;
+	position: static;
+	text-align: center;
+	bottom: 0px;
+}
+span#message {
+	display: inline-block;
+	position: relative;
+	background-color: rgba(100,100,100,.5);
+	color: black;
+	font-size: .8em;
+	text-align: center;
+}
