--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 	display: inline-block;
 	position: relative;
 	margin: 1em 0;
-	
+
 	background-color: white;
 	border: 1px solid gray;
 	border-radius: 5px;
 	box-shadow: 0px 0px 50px gray;
 	height: 7em;
 	width: 12em;
-	
+
 	text-align: center;
 	overflow: hidden;
 }
@@ -55,37 +55,47 @@
 		div#wrap {
 			display: block;
 			text-align: center;
-			
+
 			max-width: 100%;
 			max-height: 40em;
 			padding-top: 0em;
 			padding-bottom: 0em;
 			overflow: hidden;
-			
+
 			background-position: center;
 			background-size: auto auto;
 			background-repeat: repeat-x;
-			
+
 			transition: all 3s;
 		}
 		ul#scrollLrc {
 			text-align: center;
 		}
-		div#alImg:hover {
-			transition: all 8s;
-			transform: rotate(360deg);
+
+		@keyframes goround {
+			from { transform: rotate(0deg); }
+			to   { transform: rotate(360deg); }
+		}
+		@-webkit-keyframes goround {
+			from { transform: rotate(0deg); }
+			to   { transform: rotate(360deg); }
+		}
+
+		div.round {
+			animation: goround 6s infinite;
+			-webkit-animation: goround 6s infinite;
 		}
 		div#alImg {
 			display: inline-block;
-			
+
 			box-shadow: 5px 5px 10px black;
-		
+
 			background-image: url(OneRepublic.jpg);
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: 100% auto;
 			border-radius: 100%;
-			
+
 			max-width: 60%;
 			max-height: 60%;
 			height: 120px;
@@ -94,10 +104,10 @@
 			padding: 0 0;
 			margin: .8em 0;
 			transition: all 4s;
-			
+
 			vertical-align: middle;
 		}
-		
+
 		span#w {
 		  display: block;
 			padding: .3em 1em;
@@ -132,7 +142,7 @@
 			margin-bottom: 1em;
 			padding: .1em 1em
 		}
-		
+
 		div#lrc {
 			display: inline-block;
 			text-align: center;
@@ -141,7 +151,7 @@
 			background-color: rgba(255,255,255,.3);
 			height: 60%;
 			overflow: hidden;
-			
+
 			transition: all .5s;
 		}
 		div#lrc :hover {
@@ -167,7 +177,7 @@
 			background-color: rgba(255,255,255,.9);
 			position: inline-block;
 		}
-		
+
 		canvas#playMode {
 			position: relative;
 			top: 20px;
