--- a/ui/ui.css
+++ b/ui/ui.css
@@ -1,3 +1,15 @@
+body {
+    padding: 0;
+    margin: 0;
+}
+#background {
+    display: inline-block;
+    position: absolute;
+    height: 667px;
+    width:  400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #main {
     display: inline-block;
     position: absolute;
@@ -5,7 +17,7 @@
     width:  400px;
     border: black 2px solid;
 
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.8);
     color: white;
 }
 
@@ -87,7 +99,8 @@ span#return, span#share {
 
 
 div#lyric-container {
-    height: 20em;
+    height: 28em;
+    overflow: hidden;
 }
 
 div#lyric-container ul {
@@ -100,7 +113,6 @@ div#lyric-container ul {
 #option {
     position: absolute;
     width: 100%;
-    height: 5em;
 }
 #option-menu {
     display: inline-block;
@@ -186,3 +198,35 @@ span#play {
     text-align: center;
     vertical-align: middle;
 }
+
+
+ul#lyric {
+	text-align: center;
+	position: relative;
+	list-style-type: none;
+	min-height: 25em;
+	padding: 0;
+	margin: 0;
+	transition: all 1s;
+}
+.line {
+	color: white;
+	transition: all 1s;
+}
+.line:hover {
+	color: blue;
+	/*background-color: white;*/
+	transition: all 1s;
+}
+.focus {
+	color: blue;
+	font-weight: 700;
+	/*background-color: rgba(255,255,255,.9);*/
+	position: inline-block;
+	transition: all 1s;
+}
+/*.focus + .line {
+	color: blue;
+	/*background-color: rgba(255, 255, 255, 0.6);*/
+	transition: all 1s;
+}*/
