fix: album-img ==> span.disk goRound CSS3 animation

--- a/style/ui.css
+++ b/style/ui.css
@@ -191,6 +191,23 @@ div#lyric-lrc, div#lyric-album {
     from { -moz-transform: rotate(0deg); }
     50%  { -moz-transform: rotate(180deg); }
     100% { -moz-transform: rotate(360deg); } }
+.goRound {
+        animation-name: goRound;
+        animation-duration: 10s;
+        animation-timing-function: linear;
+        animation-delay: 0s;
+        animation-iteration-count: infinite;
+        -webkit-animation-name: goRound;
+        -webkit-animation-duration: 10s;
+        -webkit-animation-timing-function: linear;
+        -webkit-animation-delay: 0s;
+        -webkit-animation-iteration-count: infinite;
+        -moz-animation-name: goRound;
+        -moz-animation-duration: 10s;
+        -moz-animation-timing-function: linear;
+        -moz-animation-delay: 0s;
+        -moz-animation-iteration-count: infinite;
+}
 
 @keyframes fadein {
     from { opacity: 0;}
@@ -250,25 +267,6 @@ div#lyric-album>span.disk {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
-
-    animation-name: goRound;
-    animation-duration: 10s;
-    animation-timing-function: linear;
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
-    animation-play-state: paused;
-    -webkit-animation-name: goRound;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-delay: 0s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-play-state: paused;
-    -moz-animation-name: goRound;
-    -moz-animation-duration: 10s;
-    -moz-animation-timing-function: linear;
-    -moz-animation-delay: 0s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-play-state: paused;
 }
 span.song-opt-grp {
     position: absolute;
